stl-test/Tests/coordinate/index/Negative/test3.cpp
//#fail
#include <coordinate>
int main(void)
{
    std::index<2> cord{5566};
}
